# fixed-point-number

./: CMakeLists.txt  README.md
include/: fixed_point_number.hpp
tests/: CMakeLists.txt  fixed_point_number_tests.cpp  unit_tests_common.hpp
